@@ -25,10 +25,10 @@ import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.PathMatcher;
-import java.nio.file.Paths;
 import java.util.Collection;
-import java.util.Collections;
 
+import static java.util.Collections.emptyList;
+import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
@@ -52,7 +52,7 @@ class DefaultProjectParserIsExcludedTest {
             git.add().addFilepattern(".gitignore").call();
             git.commit().setMessage("initial").call();
 
-            assertThat(DefaultProjectParser.isExcluded(repo, Collections.emptyList(), Paths.get("generated.txt")))
+            assertThat(DefaultProjectParser.isExcluded(repo, emptyList(), Path.of("generated.txt")))
                     .as("untracked gitignored file should be excluded")
                     .isTrue();
         }
@@ -71,7 +71,7 @@ class DefaultProjectParserIsExcludedTest {
             git.add().addFilepattern(".gitignore").call();
             git.commit().setMessage("add gitignore").call();
 
-            assertThat(DefaultProjectParser.isExcluded(repo, Collections.emptyList(), Paths.get("tracked-ignored.txt")))
+            assertThat(DefaultProjectParser.isExcluded(repo, emptyList(), Path.of("tracked-ignored.txt")))
                     .as("tracked gitignored file should NOT be excluded")
                     .isFalse();
         }
@@ -88,7 +88,7 @@ class DefaultProjectParserIsExcludedTest {
             git.add().addFilepattern(".gitignore").call();
             git.commit().setMessage("initial").call();
 
-            assertThat(DefaultProjectParser.isExcluded(repo, Collections.emptyList(), Paths.get("build/output.txt")))
+            assertThat(DefaultProjectParser.isExcluded(repo, emptyList(), Path.of("build/output.txt")))
                     .as("untracked file in gitignored directory should be excluded")
                     .isTrue();
         }
@@ -107,7 +107,7 @@ class DefaultProjectParserIsExcludedTest {
             git.add().addFilepattern(".gitignore").call();
             git.commit().setMessage("add gitignore").call();
 
-            assertThat(DefaultProjectParser.isExcluded(repo, Collections.emptyList(), Paths.get("build/output.txt")))
+            assertThat(DefaultProjectParser.isExcluded(repo, emptyList(), Path.of("build/output.txt")))
                     .as("tracked file in gitignored directory should NOT be excluded")
                     .isFalse();
         }
@@ -115,20 +115,20 @@ class DefaultProjectParserIsExcludedTest {
 
     @Test
     void exclusionMatcherMatchesDirectly() {
-        Collection<PathMatcher> matchers = Collections.singletonList(
+        Collection<PathMatcher> matchers = singletonList(
                 FileSystems.getDefault().getPathMatcher("glob:**/secret.properties"));
 
-        assertThat(DefaultProjectParser.isExcluded(null, matchers, Paths.get("config/secret.properties")))
+        assertThat(DefaultProjectParser.isExcluded(null, matchers, Path.of("config/secret.properties")))
                 .as("path matching exclusion pattern should be excluded")
                 .isTrue();
     }
 
     @Test
     void exclusionMatcherDoesNotMatchUnrelatedPath() {
-        Collection<PathMatcher> matchers = Collections.singletonList(
+        Collection<PathMatcher> matchers = singletonList(
                 FileSystems.getDefault().getPathMatcher("glob:**/secret.properties"));
 
-        assertThat(DefaultProjectParser.isExcluded(null, matchers, Paths.get("config/application.properties")))
+        assertThat(DefaultProjectParser.isExcluded(null, matchers, Path.of("config/application.properties")))
                 .as("path not matching exclusion pattern should not be excluded")
                 .isFalse();
     }
@@ -137,10 +137,10 @@ class DefaultProjectParserIsExcludedTest {
     void exclusionMatcherMatchesRootFileViaPrefixedSlash() {
         // PathMatcher won't match "build.gradle" against "**/build.gradle" without a leading slash;
         // isExcluded handles this by re-checking with a "/" prefix for relative paths
-        Collection<PathMatcher> matchers = Collections.singletonList(
+        Collection<PathMatcher> matchers = singletonList(
                 FileSystems.getDefault().getPathMatcher("glob:**/build.gradle"));
 
-        assertThat(DefaultProjectParser.isExcluded(null, matchers, Paths.get("build.gradle")))
+        assertThat(DefaultProjectParser.isExcluded(null, matchers, Path.of("build.gradle")))
                 .as("root-level file should match **/build.gradle via leading-slash prefixing")
                 .isTrue();
     }
@@ -149,10 +149,10 @@ class DefaultProjectParserIsExcludedTest {
     void exclusionMatcherMatchesRootFileWithLeadingSlash() {
         // When the path already has a leading slash, it should match directly
         // without needing the prefixing logic
-        Collection<PathMatcher> matchers = Collections.singletonList(
+        Collection<PathMatcher> matchers = singletonList(
                 FileSystems.getDefault().getPathMatcher("glob:**/build.gradle"));
 
-        assertThat(DefaultProjectParser.isExcluded(null, matchers, Paths.get("/build.gradle")))
+        assertThat(DefaultProjectParser.isExcluded(null, matchers, Path.of("/build.gradle")))
                 .as("root-level file with leading slash should match **/build.gradle directly")
                 .isTrue();
     }
@@ -160,10 +160,10 @@ class DefaultProjectParserIsExcludedTest {
     @Test
     void exclusionMatcherMatchesSubdirFileWithoutPrefixing() {
         // A file in a subdirectory should match directly without needing the "/" prefix path
-        Collection<PathMatcher> matchers = Collections.singletonList(
+        Collection<PathMatcher> matchers = singletonList(
                 FileSystems.getDefault().getPathMatcher("glob:**/build.gradle"));
 
-        assertThat(DefaultProjectParser.isExcluded(null, matchers, Paths.get("module/build.gradle")))
+        assertThat(DefaultProjectParser.isExcluded(null, matchers, Path.of("module/build.gradle")))
                 .as("subdirectory file should match **/build.gradle directly")
                 .isTrue();
     }
